# QuaDS

./: CMakeLists.txt  LICENSE  README.md  controller_node.py  controller_node_spencer.py  gmm_trajectory_datafirst_flight.mat  gmm_trajectory_dataline_forward.mat  load.py  lpv_ds_class.py  mocap_estimator.cpp  package.xml  py_test.m  reproduction.py  ros_sim.py  setup_workspace.sh  test.py  test_gmm.mat  trajectory_data.mat  trajectory_dataline_backward.mat  wind_estimator_node.py
bag/: circle_twice.bag  first_flight.bag  first_flight_first_half.bag  line_backward.bag  line_forward.bag
config/: cf_gains.yaml  cfbl_gains.yaml  cfutk_params.yaml  lidar.yaml
gmm_mat_data/: gmm_trajectory_dataline_forward.mat
gmm_mat_data/Previous Data/: gmm_trajectory_datacircle_twice.mat
gmm_mat_data/Velocity Decrease Data/: gmm_trajectory_datacircle_twice.mat
launch/: bagging.launch  crazyflie.launch  main.launch  main_withlidar.launch  quadrotor_control.launch  run.launch
matlab/: ch3_ex0_drawData.m  ch3_ex4_lpvDS.m
rotorpy_hardware/.docker/: Dockerfile  build_container.sh  run_container.sh
rotorpy_hardware/config/: cfbl_params.yaml  optitrack_config.yaml
rotorpy_hardware/msg/: ExtendedSO3Command.msg
rotorpy_hardware/rviz/: lidar_viz.rviz
rviz/: main.rviz
src/: gmm.mat
trajectory_data/: trajectory_data1.mat  trajectory_datacircle_twice.mat  trajectory_datafirst_flight.mat  trajectory_datafirst_flight_first_half.mat  trajectory_datafirst_flight_last_half.mat  trajectory_dataline_backward.mat  trajectory_dataline_forward.mat
(+3 files in other folders)
