<?xml version="1.0"?>
<package format="2">
  <name>rotorpy_hardware</name>
  <version>0.0.1</version>
  <description>The RotorPy Crazyflie hardware interface.</description>
  <maintainer email="sfolk@seas.upenn.edu">Spencer Folk</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <export>
  </export>
</package>
